--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="The Water Agriculture Technology & Remote Sensing Lab. " />
 
   <!-- Open Graph for nice link previews -->
-  <meta property="og:title" content="Lab Name" />
+  <meta property="og:title" content="Water Agriculture Technology & Remote Sensing Lab" />
   <meta property="og:description" content="Applied research using measurements, models, and satellite observations at CSUMB." />
   <meta property="og:type" content="website" />
 
