Update lab name and contact information in index.html

--- a/index.html
+++ b/index.html
@@ -90,15 +90,14 @@
   <header>
     <div class="wrap top">
       <div class="brand">
-        <h1>Lab Name</h1>
+        <h1>Water Agriculture Technology & Remote Sensing (WATRS)</h1>
         <p>
           The WATRS Lab at <strong>CSUMB</strong> conducts applied research using
           <strong>ground-based measurements</strong>, <strong>models</strong>, <strong> satellite observations</strong>, and <strong> software developement</strong>.
-          Our work bridges methods (e.g., field studies, modeling, experiments) and applications (e.g., agriculture, water resources.
         </p>
         <div style="margin-top:14px">
           <span class="pill"><span class="dot"></span> Open positions: <a href="#join">See joining</a></span>
-          <span class="pill">📍 City, State</span>
+          <span class="pill">📍 California State University, Monterey Bay is located in Monterey County, California.</span>
           <span class="pill">✉️ <a href="mailto:adpurdy@csumb.edu">adpurdy@csumb.edu</a></span>
         </div>
       </div>
@@ -235,15 +234,14 @@
       <div class="card span12">
         <h2>Contact</h2>
         <p>
-          <strong>Lab Name</strong><br/>
-          Department / School, University<br/>
-          Building, Room — Street Address<br/>
-          City, State ZIP<br/>
+          <strong>Water Agriculture Technology & Remote Sensing (WATRS)</strong><br/>
+          Department of Applied Environmental Science, CSUMB<br/>
+          Chapman Science Center, Room E124<br/>
+          6133 5th Ave, Seaside, CA 93955<br/>
         </p>
         <p class="meta">
-          Email: <a href="mailto:lab@email.edu">lab@email.edu</a> ·
-          GitHub: <a href="#">github.com/org</a> ·
-          Bluesky/Twitter/LinkedIn: <a href="#">@handle</a>
+          Email: <a href="mailto:adpurdy@csumb.edu">adpurdy@csumb.edu</a> ·
+          GitHub: <a href="#">https://github.com/watrs-csumb</a> ·
         </p>
       </div>
     </section>
@@ -251,7 +249,7 @@
 
   <footer>
     <div class="wrap">
-      <div>© <span id="y"></span> Lab Name. Built on GitHub Pages.</div>
+      <div>© <span id="y"></span> WATRS. Built on GitHub Pages.</div>
       <div class="meta">Last updated: <span id="d"></span></div>
     </div>
   </footer>
